# mySockets

./: CMakeLists.txt
client/: CMakeLists.txt
client/include/: client.hpp
client/source/: client.cpp  mainClient.cpp
client2/: CMakeLists.txt
client2/source/: mainClient2.cpp
interfaces/: CMakeLists.txt
interfaces/include/: client_socket.hpp  i_client_socket.hpp  i_server.hpp  i_server_socket.hpp  i_socket.hpp  safty_queue.hpp  server_socket.hpp
interfaces/source/: client_socket.cpp  safty_queue.cpp  server_socket.cpp
server/: CMakeLists.txt
server/include/: server.hpp
server/source/: mainServer.cpp  server.cpp
